--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -32,7 +32,7 @@
                 [showIcon]="false"
                 [type]="'info'"
             >
-                You are browsing <strong>MegaPlug Dashboard</strong>
+                You are browsing <strong>Naya Dashboard</strong>
             </fuse-alert>
 
             <!-- Alert -->
