--- a/src/app/modules/users/components/all-users/all-users.component.html
+++ b/src/app/modules/users/components/all-users/all-users.component.html
@@ -14,7 +14,7 @@
         <form class="flex flex-row justify-between items-center w-full" [formGroup]="filterForm" (ngSubmit)="onFilter()">
             <div class="flex flex-row gap-4 w-full max-w-xl">
                 <mat-form-field class="" appearance="outline">
-                    <mat-label>Role Name</mat-label>
+                    <mat-label>User Name</mat-label>
                     <input matInput formControlName="name" />
                 </mat-form-field>
                 <mat-form-field class="" appearance="outline">
