--- a/src/app/modules/admin/example/example.component.html
+++ b/src/app/modules/admin/example/example.component.html
@@ -1,9 +1,15 @@
-<div class="flex min-w-0 flex-auto flex-col">
-    <!-- Main -->
-    <div class="flex-auto p-6 sm:p-10">
-        <!-- CONTENT GOES HERE -->
-        <div
-            class="h-400 max-h-400 min-h-400 rounded-2xl border-2 border-dashed border-gray-300"
-        ></div>
-    </div>
+<div class="map-wrapper">
+  <google-map
+    [height]="'100%'"
+    [width]="'100%'"
+    [center]="center"
+    [zoom]="zoom"
+  >
+    <map-marker
+      [position]="markerPosition"
+      [label]="'Station'"
+      [title]="'Station Location'"
+    >
+    </map-marker>
+  </google-map>
 </div>
