--- a/src/app/modules/admin/example/example.component.html
+++ b/src/app/modules/admin/example/example.component.html
@@ -7,8 +7,7 @@
   >
     <map-marker
       [position]="markerPosition"
-      [label]="'Station'"
-      [title]="'Station Location'"
+      [icon]="stationIcon"
     >
     </map-marker>
   </google-map>
