--- a/src/app/layout/layouts/horizontal/centered/centered.component.html
+++ b/src/app/layout/layouts/horizontal/centered/centered.component.html
@@ -51,7 +51,7 @@
                     <!-- Small version -->
                     <img
                         class="flex w-8 lg:hidden"
-                        src="images/logo/logo.svg"
+                        src="megaplug/logo-32.png"
                         alt="Logo image"
                     />
                 </div>
