--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,5 +4,5 @@
 /* ----------------------------------------------------------------------------------------------------- */
 
 .mat-mdc-form-field-subscript-wrapper {
-    margin-bottom: 15px !important;
+    // margin-bottom: 15px !important;
 }
