working on stats

--- a/src/app/modules/admin/station-details/components/stations-stats/station-stats-tab.component.html
+++ b/src/app/modules/admin/station-details/components/stations-stats/station-stats-tab.component.html
@@ -1,4 +1,4 @@
-<div class="stats-grid">
+<div class="stats-grid multi">
   <!-- Consumed kW/h -->
   <div class="stats-card">
     <div class="stats-header">
@@ -41,6 +41,129 @@
       [legend]="consumedKwChartOptions.legend"
       [colors]="consumedKwChartOptions.colors"
       [fill]="consumedKwChartOptions.fill">
+    </apx-chart>
+  </div>
+
+  <!-- Charging Sessions -->
+  <div class="stats-card">
+    <div class="stats-header">
+      <div>
+        <div class="stats-title">Charging Sessions</div>
+        <div class="stats-subtitle">Your Charging Sessions in a Year</div>
+      </div>
+      <button class="stats-menu"><mat-icon>more_vert</mat-icon></button>
+    </div>
+    <div class="stats-main">
+      <!-- <div class="stats-icon" style="background: linear-gradient(180deg, #FFB200 0%, #FFCB52 100%); color: #FFB200;">
+        <mat-icon>power</mat-icon>
+      </div> -->
+      <div class="stats-icon gradient power">
+        <img src="megaplug/station/stats/power.svg" alt="power" class="w-[10px] h-[18px]" />
+      </div>
+      <div>
+        <div class="stats-label">Total Charging Sessions</div>
+        <div class="stats-value-row">
+          <span class="stats-value">{{ sessionsValue }}</span>
+          <span class="stats-change down" style="color: #FF5B5B;">
+            {{ sessionsChange.replace('-', '') }}
+            <img src="megaplug/station/stats/carret-down.svg" alt="down" class="w-[19px] h-[19px]" style="vertical-align: middle;">
+          </span>
+        </div>
+      </div>
+    </div>
+    <apx-chart
+      [series]="sessionsChartOptions.series"
+      [chart]="sessionsChartOptions.chart"
+      [xaxis]="sessionsChartOptions.xaxis"
+      [yaxis]="sessionsChartOptions.yaxis"
+      [dataLabels]="sessionsChartOptions.dataLabels"
+      [stroke]="sessionsChartOptions.stroke"
+      [tooltip]="sessionsChartOptions.tooltip"
+      [markers]="sessionsChartOptions.markers"
+      [grid]="sessionsChartOptions.grid"
+      [legend]="sessionsChartOptions.legend"
+      [colors]="sessionsChartOptions.colors"
+      [fill]="sessionsChartOptions.fill">
+    </apx-chart>
+  </div>
+
+  <!-- Revenue -->
+  <div class="stats-card">
+    <div class="stats-header">
+      <div>
+        <div class="stats-title">Revenue</div>
+        <div class="stats-subtitle">Your Revenue in a Year</div>
+      </div>
+      <button class="stats-menu"><mat-icon>more_vert</mat-icon></button>
+    </div>
+    <div class="stats-main">
+      <div class="stats-icon gradient revenue">
+        <img src="megaplug/station/stats/money.svg" alt="revenue" class="w-[18px] h-[18px]" />
+      </div>
+      <div>
+        <div class="stats-label">Total Revenue</div>
+        <div class="stats-value-row">
+          <span class="stats-value">{{ revenueValue }}</span>
+          <span class="stats-change up" style="color: #16c784;">
+            {{ revenueChange.replace('+', '') }}
+            <img src="megaplug/station/stats/carret-up.png" alt="up" class="w-[19px] h-[19px]">
+          </span>
+        </div>
+      </div>
+    </div>
+    <apx-chart
+      [series]="revenueChartOptions.series"
+      [chart]="revenueChartOptions.chart"
+      [xaxis]="revenueChartOptions.xaxis"
+      [yaxis]="revenueChartOptions.yaxis"
+      [dataLabels]="revenueChartOptions.dataLabels"
+      [stroke]="revenueChartOptions.stroke"
+      [tooltip]="revenueChartOptions.tooltip"
+      [markers]="revenueChartOptions.markers"
+      [grid]="revenueChartOptions.grid"
+      [legend]="revenueChartOptions.legend"
+      [colors]="revenueChartOptions.colors"
+      [fill]="revenueChartOptions.fill">
+    </apx-chart>
+  </div>
+
+  <!-- Failure Rate -->
+  <div class="stats-card">
+    <div class="stats-header">
+      <div>
+        <div class="stats-title">failure rate</div>
+        <div class="stats-subtitle">Your failure rate in a Year</div>
+      </div>
+      <button class="stats-menu"><mat-icon>more_vert</mat-icon></button>
+    </div>
+    <div class="stats-main">
+      <div class="stats-icon gradient failure">
+        <img src="megaplug/station/stats/failure.svg" alt="failure" class="w-[18px] h-[18px]" />
+      </div>
+      <div>
+        <div class="stats-label">Total failure rate</div>
+        <div class="stats-value-row">
+          <span class="stats-value">{{ failureValue }}</span>
+          <span class="stats-change down" style="color: #FF5B5B;">
+            {{ failureChange.replace('-', '') }}
+            <img src="megaplug/station/stats/carret-down.svg" alt="down" class="w-[19px] h-[19px]" style="vertical-align: middle;">
+          </span>
+        </div>
+      </div>
+    </div>
+    <apx-chart
+      [series]="failureChartOptions.series"
+      [chart]="failureChartOptions.chart"
+      [xaxis]="failureChartOptions.xaxis"
+      [yaxis]="failureChartOptions.yaxis"
+      [dataLabels]="failureChartOptions.dataLabels"
+      [stroke]="failureChartOptions.stroke"
+      [tooltip]="failureChartOptions.tooltip"
+      [markers]="failureChartOptions.markers"
+      [grid]="failureChartOptions.grid"
+      [legend]="failureChartOptions.legend"
+      [colors]="failureChartOptions.colors"
+      [fill]="failureChartOptions.fill">
     </apx-chart>
   </div>
 </div>
