--- a/src/app/modules/admin/station-details/components/stations-stats/station-stats-tab.component.scss
+++ b/src/app/modules/admin/station-details/components/stations-stats/station-stats-tab.component.scss
@@ -2,8 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  padding: 24px;
-  background: #f6f8fb;
+  // padding: 24px;
   min-height: 100vh;
 }
 
